--- a/Benshi.AI_Assignment/app/src/main/AndroidManifest.xml
+++ b/Benshi.AI_Assignment/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sanjay.benshiai_assignment">
 
+    <uses-permission android:name= "android.permission.INTERNET"/>
+
     <application
+        android:name= ".PostApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,14 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BenshiAI_Assignment">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".PostActivity"
+            android:exported="true"
+            android:label="Posts">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
