--- a/Benshi.AI_Assignment/app/build.gradle
+++ b/Benshi.AI_Assignment/app/build.gradle
@@ -24,6 +24,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures{
+        viewBinding = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -76,7 +79,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
 
-
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     def rxjava_version = "2.2.7"
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
 
