--- a/Benshi.AI_Assignment/app/src/main/AndroidManifest.xml
+++ b/Benshi.AI_Assignment/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.sanjay.benshiai_assignment">
 
     <uses-permission android:name= "android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:name= ".PostApplication"
         android:allowBackup="true"
@@ -25,6 +26,12 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/mapKey" />
+
+
     </application>
 
 </manifest>
